fixed link overlapping logo beneath it

--- a/src/components/m-main-navigation/index.scss
+++ b/src/components/m-main-navigation/index.scss
@@ -20,6 +20,7 @@
 
 .m-main-navigation__logo-link {
   display: block;
+  align-self: flex-start;
 }
 
 .m-main-navigation__logo-img {
